[gd_scene load_steps=14 format=3 uid="uid://d2vcs8xj5mjpk"]

[ext_resource type="Script" uid="uid://dg5ndx4lmv6fp" path="res://scripts/select_car.gd" id="1_hq5wy"]
[ext_resource type="Texture2D" uid="uid://dksemi0vbrgrh" path="res://assets/cars-removebg-preview.png" id="2_hq5wy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rf4v2"]
atlas = ExtResource("2_hq5wy")
region = Rect2(36, 7, 59, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx6fg"]
atlas = ExtResource("2_hq5wy")
region = Rect2(203, 16, 49, 109)

[sub_resource type="AtlasTexture" id="AtlasTexture_atqmy"]
atlas = ExtResource("2_hq5wy")
region = Rect2(356, 19, 58, 107)

[sub_resource type="AtlasTexture" id="AtlasTexture_715lr"]
atlas = ExtResource("2_hq5wy")
region = Rect2(42, 172, 42, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_hq5wy"]
atlas = ExtResource("2_hq5wy")
region = Rect2(202, 175, 51, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5bng"]
atlas = ExtResource("2_hq5wy")
region = Rect2(362, 175, 47, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyvwi"]
atlas = ExtResource("2_hq5wy")
region = Rect2(36, 331, 53, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkpaq"]
atlas = ExtResource("2_hq5wy")
region = Rect2(203, 332, 49, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijffh"]
atlas = ExtResource("2_hq5wy")
region = Rect2(363, 336, 51, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_uidc6"]
atlas = ExtResource("2_hq5wy")
region = Rect2(483, 161, 55, 134)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2efi"]
atlas = ExtResource("2_hq5wy")
region = Rect2(488, 4, 53, 130)

[node name="select_car" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hq5wy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button1" type="Button" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_rf4v2")

[node name="Button2" type="Button" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_gx6fg")

[node name="Button3" type="Button" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_atqmy")

[node name="Button4" type="Button" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_715lr")

[node name="Button5" type="Button" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = SubResource("AtlasTexture_hq5wy")

[node name="Button6" type="Button" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_d5bng")

[node name="Button11" type="Button" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_tyvwi")

[node name="Button7" type="Button" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = SubResource("AtlasTexture_vkpaq")

[node name="Button8" type="Button" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_ijffh")

[node name="Button9" type="Button" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_uidc6")

[node name="Button10" type="Button" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_u2efi")

[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/Button11" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/Button7" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/Button8" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/Button9" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/HBoxContainer/Button10" to="." method="_on_button_6_pressed"]
